
    <resources>
        <!--<string name="app_name">四城</string>-->
        <string name="app_name">0575</string>
        <string name="confirm_dialog_ok">确定</string>
        <string name="confirm_dialog_cancel">取消</string>
        <string name="tab_news_text">动态</string>
        <string name="tab_star_text">达人</string>
        <string name="tab_weibo_text">圈子</string>
        <string name="tab_find_text">发现</string>
        <string name="tab_my_text">我的</string>
        <string name="btn_right_filter">筛选</string>
        <string name="btn_left_qrcode">扫码</string>
        <string name="btn_left_publish">发布</string>
        <string name="btn_left_setting">设置</string>
        <string name="please_input_user_id">请输入用户名</string>
        <string name="please_input_phone_number">请输入手机号</string>
        <string name="back">返回</string>
        <string name="login">登录</string>
        <string name="please_input_password">请输入密码</string>
        <string name="forget_password">忘记密码</string>
        <string name="create_account">创建新账号</string>
        <string name="pass">跳过\n%1$d</string>
        <string name="title_login_by_phone">手机号登录</string>
        <string name="phone_number_code_zh">+86</string>
        <string name="get_yzm">下一步</string>
        <string name="agree">同意</string>
        <string name="register">成为新会员</string>
        <string name="find_password_by_phone">用手机号找回密码</string>
        <string name="please_input_zym">请输入验证码</string>
        <string name="send_yzm_desc">已向手机%1$s发送了验证码</string>
        <string name="call_yzm_desc">请注意接听手机%1$s语音验证码的电话</string>
        <string name="voice_sms_auth">收不到验证码，试试语音验证</string>
        <string name="please_set_password">请设置登录密码(%1$d-%2$d位)</string>
        <string name="please_input_new_password">请输入新密码(%1$d-%2$d位)</string>
        <string name="resend_sec">重新发送%1$d</string>
        <string name="resend">重新发送</string>
        <string name="login_by_phone">手机号登录</string>
        <string name="login_by_wechat">微信账号登录</string>
        <string name="login_by_weibo">微博账号登录</string>
        <string name="login_by_qq">QQ账号登录</string>
        <string name="man">男</string>
        <string name="woman">女</string>
        <string name="userinfo_guide">设定资料</string>
        <string name="please_select_birthday">请选择出生日期</string>
        <string name="please_select_city">请选择你的城市</string>
        <string name="please_input_qq">请输入您的常用QQ</string>
        <string name="cancel">取消</string>
        <string name="ok">确定</string>
        <string name="please_input_username">请输入昵称</string>
        <string name="auto_location">已自动定位到</string>
        <string name="picker_other_location">手动选择其他区域</string>
        <string name="locating">定位中...</string>
        <string name="pick_area">选择区域</string>
        <string name="setting_completed">设置完成</string>
        <string name="user_icon">头像</string>
        <string name="username">昵称</string>
        <string name="user_honor">签名</string>
        <string name="honor_default">这个人很懒,什么也没有留下</string>
        <string name="sex">性别</string>
        <string name="phone_number">手机号码</string>
        <string name="change_password">修改密码</string>
        <string name="wechat">微信</string>
        <string name="weibo">新浪微博</string>
        <string name="QQ">腾讯QQ</string>
        <string name="birthday">生日</string>
        <string name="area">区域</string>
        <string name="edit_userinfo">资料修改</string>
        <string name="auth_binding">账号绑定</string>
        <string name="please_input_honor">请输入签名</string>
        <string name="edit_phone">更换手机号</string>
        <string name="please_input_old_phone">请输入原手机号</string>
        <string name="please_input_old_password">请输入原密码</string>
        <string name="close">关闭</string>
        <string name="more">更多</string>
        <string name="copy_content">复制内容</string>
        <string name="load_more">上拉加载更多</string>
        <string name="load_full"> </string>
        <string name="load_loading">正在加载中...</string>
        <string name="no_data">没有数据</string>
        <string name="click_retry">点击重试</string>
        <string name="weibo_sub">圈子订阅</string>
        <string name="weibo_cate_must_sub">此标签必须订阅</string>
        <string name="weibo_cate_sub_success">此标签订阅成功</string>
        <string name="weibo_cate_unsub_success">此标签已取消订阅</string>
        <string name="weibo_reply_more">查看更多</string>
        <string name="weibo_cate_edit">修改类别</string>
        <string name="emotion_status">情感状态</string>
        <string name="job">职业</string>
        <string name="height">身高</string>
        <string name="wight">体重</string>
        <string name="please_input_height">请输入身高</string>
        <string name="please_input_weight">请输入体重</string>
        <string name="pick_job">选择职业</string>
        <string name="setting">设置</string>
        <string name="privacy_setting">隐私设置</string>
        <string name="user_info">个人资料</string>
        <string name="follow">关注</string>
        <string name="please_input_alipay">请输入支付宝账号</string>
        <string name="bind_phone">绑定手机号</string>
        <string name="bind_phone_desc">绑定账号的手机号\n之后可以用手机号及当前密码登录</string>
        <string name="check">查看</string>
        <string name="add_friend_confirm">加我为好友时需要验证</string>
        <string name="find_me_by_nearby">可通过附近的人找到我</string>
        <string name="find_me_by_phone">通过手机号搜到我</string>
        <string name="weibo_backlist">圈子动态黑名单</string>
        <string name="send_gift_desc">送TA礼物</string>
        <string name="gift_num">选择数量:</string>
        <string name="self_define">自定义</string>
        <string name="pay_method">支付方式:</string>
        <string name="zhifubao">支付宝</string>
        <string name="pay_cash">支付金额：</string>
        <string name="send_gift_submit">送出</string>
        <string name="personal_weibo">个人动态</string>
        <string name="no_weibo_data">她还未发过动态</string>
        <string name="received_gift">收到礼物</string>
        <string name="her_friends">她的好友</string>
        <string name="her_attentions">她关注的</string>
        <string name="her_fans">关注她的</string>
        <string name="location">所在区域</string>
        <string name="affection">情感状态</string>
        <string name="profession">职业</string>
        <string name="text_length">%1$d~%2$d位</string>
        <string name="search_hint">可按四城ID、昵称、手机号查找哦~</string>
        <string name="search_submit">搜索</string>
        <string name="search_history">搜索历史</string>
        <string name="real_name">真实姓名</string>
        <string name="please_input_realname">请输入真实姓名</string>
        <string name="post_words_num_left">剩余%1$d个字</string>
        <string name="search_hint1">按四城ID、昵称、手机号查找</string>
        <string name="attention">关注</string>
        <string name="add_friend">加为好友</string>
        <string name="chat">私聊</string>
        <string name="send_gift">送她礼物</string>
        <string name="honor">个性签名</string>
        <string name="weight">体重</string>
        <string name="constellation">星座生肖</string>
        <string name="sichenID">四城ID</string>
        <string name="record_time">%1$d/%1$d</string>
    </resources>

